--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,7 +35,7 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Your Name"
+      text: "Ziyan Peng"
 
 # Site footer
 footer:
@@ -58,3 +58,19 @@ features:
     enable: false
   privacy_pack:
     enable: false
+
+disableKinds:
+  - "event"
+  - "project" 
+  - "publication"
+  - "teaching"
+
+widgets:
+  home:
+    - bio
+    - news
+    - experience
+    # - events
+    # - projects
+    # - publications
+    # - teaching
