--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,10 +7,10 @@ main:
   - name: Bio
     url: /
     weight: 10
-  #- name: Papers
+  - name: Papers
     url: /#papers
     weight: 11
-  #- name: Talks
+  - name: Talks
     url: /#talks
     weight: 12
   - name: News
@@ -19,9 +19,9 @@ main:
   - name: Experience
     url: experience/
     weight: 20
-  #- name: Projects
+  - name: Projects
     url: projects/
     weight: 30
-  #- name: Teaching
+  - name: Teaching
     url: teaching/
     weight: 40
